Fix: Ensure .nojekyll is copied to docs folder

--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": ".nojekyll",
+                "input": "public",
+                "output": "/"
               }
             ],
             "styles": [
