--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
-            "outputPath": "docs",
+            "outputPath": "dist/keycloak-demo",
             "browser": "src/main.ts",
             "prerender": false,
             "tsConfig": "tsconfig.app.json",
