--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build && npm run copy-dist",
-    "copy-dist": "powershell -Command \"Copy-Item -Path dist/keycloak-demo/browser/* -Destination dist/keycloak-demo -Force -Recurse\"",
+    "copy-dist": "cp -r dist/keycloak-demo/browser/* dist/keycloak-demo/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
